--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.12.1",
     "core-js": "^3.6.4",
     "register-service-worker": "^1.6.2",
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.2",
     "vue-property-decorator": "^8.3.0",
     "vue-router": "^3.1.5",
+    "vue-yandex-maps": "^0.10.6",
     "vuetify": "^2.1.0",
     "vuex": "^3.1.2"
   },
